src/test/ui/issues/issue-49934.stderr
warning: `#[derive]` does nothing on macro invocations
  --> $DIR/issue-49934.rs:19:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this may become a hard error in a future release

error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:4:8
   |
LL | fn foo<#[derive(Debug)] T>() {
   |        ^^^^^^^^^^^^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/issue-49934.rs:4:17
   |
LL | fn foo<#[derive(Debug)] T>() {
   |                 ^^^^^

error: aborting due to 2 previous errors

